Add the color black

--- a/css/theme.css
+++ b/css/theme.css
@@ -4,7 +4,7 @@
   --color-secondary: #ffa500;
   --color-accent: #E0E0E0;
   --color-neutral-beige: #e2e2e2;
-  --color-whatever: #c5f5f0;
+  --color-whatever: #000;
 
   --font-primary: "Multi", sans-serif;
   --font-secondary: "Multi", sans-serif;
