Delete the extra color

--- a/css/theme.css
+++ b/css/theme.css
@@ -2,9 +2,7 @@
   --color-primary: #39c9bb;
   --color-primary-light: #79e9de;
   --color-secondary: #ffa500;
-  --color-accent: #E0E0E0;
-  --color-neutral-beige: #e2e2e2;
-  --color-whatever: #000;
+  --color-accent: #e2e2e2;
 
   --font-primary: "Multi", sans-serif;
   --font-secondary: "Multi", sans-serif;
