--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,35 +1,25 @@
 .btn {
   background-color: var(--color-accent);
-  border-color: var(--color-secondary;
-  color: var(--color-dark);
+  border-style: none;
+  color: var(--color-text);
+  font-family: var(--font-secondary);
 }
 
 .btn:hover {
-  background-color: var(--color-accent);
-  border-color: var(--color-secondary);
+  background-color: var(--color-dark);
 }
 
 .btn-ghost {
   background-color: transparent;
-  color: var(--color-accent);
+  color: var(--color-dark);
+  border: 3px solid var(--color-accent);
 }
 
 .btn-ghost:hover {
   color: var(--color-accent);
+  background-color: var(--color-dark);
 }
 
 .btn-light {
   background-color: var(--color-accent);
-  border-color: var(--color-secondary);
-  color: var(--color-dark);
-}
-
-.btn-big {
-  background-color: var(--color-accent);
-  border-color: var(--color-secondary);
-}
-
-.btn-checkout {
-  background-color: var(--color-accent);
-  border-color: var(--color-secondary);
 }
