--- a/css/theme.css
+++ b/css/theme.css
@@ -34,7 +34,7 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-secondary);
-  color: var(--color-dark);
+  color: var(--color-primary-dark);
 }
 
 ul, ol {
