Add the product cards with the for loop

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
-<h1>{{page.name}}</h1>
-<p>{{page.description}}</p>
-<img src="{{page.image}}" alt="">
+{{content}}
+
+<h1>{{page.title}}</h1>
+<p>{{page.desc}}</p>
+<img src="{{page.img}}" alt="">
