--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-{{content}}
+{% pattern navigations-and-sections/product-details-img-and-text %}
+{% pattern navigations-and-sections/reviews %}
+{% pattern navigations-and-sections/quantity-option %}
 
 <h1>{{page.title}}</h1>
 <p>{{page.desc}}</p>
