--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,10 +2,6 @@
 layout: default
 ---
 
-{% pattern navigations-and-sections/product-details-img-and-text %}
+{% pattern navigations-and-sections/product-details-img-and-text data=page %}
 {% pattern navigations-and-sections/reviews %}
 {% pattern navigations-and-sections/quantity-option %}
-
-<h1>{{page.title}}</h1>
-<p>{{page.desc}}</p>
-<img src="{{page.img}}" alt="">
