--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -7,16 +7,19 @@
 }
 
 .product-card {
-  border-style: solid;
-  border-width: 1px;
+  border-style: none;
+  padding: .75rem;
+  border-width: 3px;
   border-color: var(--color-secondary-dark);
   background-color: var(--color-dark);
-  border-radius: 6px;
+  border-radius: 8px;
+  width: 100%;
   max-width: 20rem;
   min-height: 33rem;
-  background-color:
+  background-color: var(--color-primary-light);
   color: var(--color-dark);
   text-align: center;
+  display: inline-block;
 }
 
 .checkout-card {
