--- a/css/theme.css
+++ b/css/theme.css
@@ -1,12 +1,11 @@
 :root {
-  --color-primary: #79e9de;
+  --color-primary: #5CC3C2;
   --color-primary-light: #c5f5f0;
-    --color-primary-dark: #2c9c91;
-  --color-secondary: #fafafa;
-  --color-secondary-dark: #545454;
-  --color-secondary-darkest: #a8a8a8;
+    --color-primary-dark: #405556;
+  --color-secondary: #FEC3C5;
+  --color-secondary-dark: #D77071;
   --color-dark: #000;
-  --color-accent: #FFA500;
+  --color-accent: #D77071;
   --color-text: #fff;
 
   --font-secondary: "Multi", sans-serif;
@@ -24,12 +23,12 @@
 
 /* @utility Apply a light background colour to an element */
 .section-light {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary-light);
 }
 
 /* @utility Apply a dark background colour to an element */
 .section-dark {
-  background-color: var(--color-secondary-dark);
+  background-color: var(--color-primary-dark);
 }
 
 h1, h2, h3, h4, h5, h6 {
