Re-add the missing product layout

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,3 +1,7 @@
 ---
 layout: default
 ---
+
+{% pattern navigations-and-sections/product-details-img-and-text data=page %}
+{% pattern navigations-and-sections/reviews %}
+{% pattern navigations-and-sections/quantity-option %}
