Change the background colour of pattern lilbrary

--- a/css/theme.css
+++ b/css/theme.css
@@ -2,10 +2,10 @@
   --color-primary: #5CC3C2;
   --color-primary-light: #c5f5f0;
     --color-primary-dark: #405556;
-  --color-secondary: #FEC3C5;
+  --color-secondary: #c5f5f0;
   --color-secondary-dark: #D77071;
   --color-dark: #000;
-  --color-accent: #D77071;
+  --color-accent: #D77071; #FEC3C5
   --color-text: #fff;
 
   --font-secondary: "Multi", sans-serif;
@@ -23,7 +23,7 @@
 
 /* @utility Apply a light background colour to an element */
 .section-light {
-  background-color: var(--color-primary-light);
+  background-color: var(--color-secondary);
 }
 
 /* @utility Apply a dark background colour to an element */
