Make pattern library background light grey

--- a/css/theme.css
+++ b/css/theme.css
@@ -2,7 +2,7 @@
   --color-primary: #5CC3C2;
   --color-primary-light: #c5f5f0;
     --color-primary-dark: #405556;
-  --color-secondary: #c5f5f0;
+  --color-secondary: #e8e8e8;
   --color-secondary-dark: #D77071;
   --color-dark: #000;
   --color-accent: #D77071; #FEC3C5
