--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -7,15 +7,14 @@
 }
 
 .product-card {
+  margin: 0;
   border-style: none;
   padding: .75rem;
   border-width: 3px;
   border-color: var(--color-secondary-dark);
   background-color: var(--color-dark);
   border-radius: 8px;
-  width: 100%;
   max-width: 20rem;
-  min-height: 33rem;
   background-color: var(--color-primary-light);
   color: var(--color-dark);
   text-align: center;
