--- a/css/theme.css
+++ b/css/theme.css
@@ -5,7 +5,7 @@
   --color-secondary: #e8e8e8;
   --color-secondary-dark: #D77071;
   --color-dark: #000;
-  --color-accent: #D77071; #FEC3C5
+  --color-accent: #FEC3C5;
   --color-text: #fff;
 
   --font-secondary: "Multi", sans-serif;
@@ -28,7 +28,11 @@
 
 /* @utility Apply a dark background colour to an element */
 .section-dark {
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-accent);
+}
+
+.section-pink {
+  background-color: var(--color-accent);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -61,4 +65,11 @@ blockquote, cite {
 
 mark {
   background-color: var(--color-text)
+}
+
+.land {
+  background-color: var(--color-primary-light);
+  padding: 2em;
+  border-radius: 8px;
+  margin: 1em;
 }
